--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -105,8 +105,15 @@ stages:
             backendAzureRmKey: 'ado/terraform.tfstate'
 
         - task: CopyFiles@2
-          displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
+          displayName: 'Copy Terraform Files to Artifacts Staging Directory'
           inputs:
+            contents: '**/*.tf*'
+            TargetFolder: '$(build.artifactstagingdirectory)'
+
+        - task: CopyFiles@2
+          displayName: 'Copy Scripts Directory Files to Artifacts Staging Directory'
+          inputs:
+            contents: '**/scripts/**'
             TargetFolder: '$(build.artifactstagingdirectory)'
 
         - task: PublishBuildArtifacts@1
@@ -114,8 +121,8 @@ stages:
           inputs:
             ArtifactName: infra
 
-  - stage: dev
-    displayName: dev
+  - stage: Deploy
+    displayName: Deploy
     jobs:
       - job: Deploy
         displayName: Deploy
@@ -136,6 +143,21 @@ stages:
             escapeType: none
             tokenPrefix: '__'
             tokenSuffix: '__'
+
+        - task: ms-devlabs.custom-terraform-tasks.custom-terraform-installer-task.TerraformInstaller@0
+          displayName: 'Install Terraform 0.12.24'
+          inputs:
+            terraformVersion: 0.12.24
+
+        - task: ms-devlabs.custom-terraform-tasks.custom-terraform-release-task.TerraformTaskV1@0
+          displayName: 'Terraform : init'
+          inputs:
+            workingDirectory: '$(System.DefaultWorkingDirectory)'
+            backendServiceArm: ${{ variables.ado_service_connection_name }}
+            backendAzureRmResourceGroupName: '$(terraformstoragerg)'
+            backendAzureRmStorageAccountName: '$(terraformstorageaccount)'
+            backendAzureRmContainerName: terraform
+            backendAzureRmKey: 'ado/terraform.tfstate'
 
         - task: ms-devlabs.custom-terraform-tasks.custom-terraform-release-task.TerraformTaskV1@0
           displayName: 'Terraform : apply -auto-approve'
