--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,12 +61,9 @@ stages:
               
               # Create Storage Container
               az storage container create --name terraform --account-name $(terraformstorageaccount)
-              
-              # Get Storage Key
-              set KEY=$(az storage account keys list -g $(terraformstoragerg) -n $(terraformstorageaccount) --query "[0].value" -o tsv)
-              
+                            
               # Set Storage Key as Variable for later use
-              echo "##vso[task.setvariable variable=storagekey]$KEY"
+              echo "##vso[task.setvariable variable=storagekey]$(az storage account keys list -g $(terraformstoragerg) -n $(terraformstorageaccount) --query "[0].value" -o tsv)"
 
         - task: CopyFiles@2
           displayName: 'Copy Terraform Var Files to Artifacts Staging Directory'
@@ -117,7 +114,7 @@ stages:
             scriptLocation: inlineScript
             inlineScript: |
               # Upload TF Plan file to Azure Storage
-              az storage blob upload --account-name '$(terraformstorageaccount)' --account-key $($(az storage account keys list -g $(terraformstoragerg) -n $(terraformstorageaccount) --query "[0].value" -o tsv)) --container-name 'terraform' --name 'ado/plans/terraform$(Build.BuildId).tfplan' --file 'terraform$(Build.BuildId).tfplan' --auth-mode key
+              az storage blob upload --account-name '$(terraformstorageaccount)' --account-key $(storagekey) --container-name 'terraform' --name 'ado/plans/terraform$(Build.BuildId).tfplan' --file 'terraform$(Build.BuildId).tfplan'
               
         - task: CopyFiles@2
           displayName: 'Copy Terraform Files to Artifacts Staging Directory'
