--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,6 +64,12 @@ stages:
                             
               # Set Storage Key as Variable for later use
               echo "##vso[task.setvariable variable=storagekey]$(az storage account keys list -g $(terraformstoragerg) -n $(terraformstorageaccount) --query "[0].value" -o tsv)"
+
+        - task: CopyFiles@2
+          displayName: 'Copy Terraform Var Files to Artifacts Staging Directory'
+          inputs:
+            contents: '**/*.tfvars'
+            TargetFolder: '$(build.artifactstagingdirectory)'
             
         - task: qetza.replacetokens.replacetokens-task.replacetokens@3
           displayName: 'Replace tokens in terraform vars file'
@@ -92,7 +98,6 @@ stages:
           displayName: 'Terraform : plan'
           inputs:
             command: plan
-            commandOptions: '-out=terraform$(Build.BuildId).tfplan'
             workingDirectory: '$(System.DefaultWorkingDirectory)'
             environmentServiceNameAzureRM: ${{ variables.ado_service_connection_name }}
             backendServiceArm: ${{ variables.ado_service_connection_name }}
@@ -101,19 +106,16 @@ stages:
             backendAzureRmContainerName: terraform
             backendAzureRmKey: 'ado/terraform.tfstate'
             
-        - task: AzureCLI@1
-          displayName: 'Azure CLI - Upload TF Plan to Storage Account'
-          inputs:
-            azureSubscription: ${{ variables.ado_service_connection_name }}
-            scriptLocation: inlineScript
-            inlineScript: |
-              # Upload TF Plan file to Azure Storage
-              az storage blob upload --account-name '$(terraformstorageaccount)' --account-key $(storagekey) --container-name 'terraform' --name 'ado/plans/terraform$(Build.BuildId).tfplan' --file 'terraform$(Build.BuildId).tfplan'
-              
         - task: CopyFiles@2
-          displayName: 'Copy Terraform Plan File to Artifacts Staging Directory'
+          displayName: 'Copy Terraform Files to Artifacts Staging Directory'
           inputs:
-            contents: '**/*.tfplan'
+            contents: '**/*.tf'
+            TargetFolder: '$(build.artifactstagingdirectory)'
+
+        - task: CopyFiles@2
+          displayName: 'Copy Scripts Directory Files to Artifacts Staging Directory'
+          inputs:
+            contents: '**/scripts/**'
             TargetFolder: '$(build.artifactstagingdirectory)'
 
         - task: PublishBuildArtifacts@1
@@ -136,11 +138,34 @@ stages:
             artifactName: 'infra'
             downloadPath: '$(System.DefaultWorkingDirectory)/_artifacts'
 
+        - task: qetza.replacetokens.replacetokens-task.replacetokens@3
+          displayName: 'Replace tokens in terraform vars file'
+          inputs:
+            targetFiles: '$(System.DefaultWorkingDirectory)/_artifacts/infra/**/*.tfvars'
+            escapeType: none
+            tokenPrefix: '__'
+            tokenSuffix: '__'
+
+        - task: ms-devlabs.custom-terraform-tasks.custom-terraform-installer-task.TerraformInstaller@0
+          displayName: 'Install Terraform 0.12.24'
+          inputs:
+            terraformVersion: 0.12.24
+
+        - task: ms-devlabs.custom-terraform-tasks.custom-terraform-release-task.TerraformTaskV1@0
+          displayName: 'Terraform : init'
+          inputs:
+            workingDirectory: '$(System.DefaultWorkingDirectory)/_artifacts/infra'
+            backendServiceArm: ${{ variables.ado_service_connection_name }}
+            backendAzureRmResourceGroupName: '$(terraformstoragerg)'
+            backendAzureRmStorageAccountName: '$(terraformstorageaccount)'
+            backendAzureRmContainerName: terraform
+            backendAzureRmKey: 'ado/terraform.tfstate'
+
         - task: ms-devlabs.custom-terraform-tasks.custom-terraform-release-task.TerraformTaskV1@0
           displayName: 'Terraform : apply -auto-approve'
           inputs:
             command: apply
-            commandOptions: 'terraform$(Build.BuildId).tfplan -auto-approve'
+            commandOptions: '-auto-approve'
             workingDirectory: '$(System.DefaultWorkingDirectory)/_artifacts/infra'
             environmentServiceNameAzureRM: ${{ variables.ado_service_connection_name }}
             backendServiceArm: ${{ variables.ado_service_connection_name }}
