--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,8 @@ variables:
   
   - name: ado_agent_pool
     value: 'Azure Pipelines'
+  - name: ado_service_connection_name
+    value: $[variables.ado_service_connection_name]
 
 stages: 
   - stage: Build
