--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -58,8 +58,11 @@ stages:
     dependsOn: Build
     variables:
       - group: ado_dev_vars
+
+      - name: ado_azure_service_connection_name
+        value: $[variables.ado_service_connection_name]
     jobs:
     - template: /pipelines/environment.yml
       parameters:
         environment: DEV
-        ado_service_connection_name: ${{ variables.ado_service_connection_name }}
+        ado_service_connection_name: ${{ variables.ado_azure_service_connection_name }}
