--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -45,13 +45,13 @@ stages:
         - task: CopyFiles@2
           displayName: 'Copy all Infra Files to Artifacts Staging Directory'
           inputs:
-            contents: '**/infra/**'
+            contents: 'infra'
             TargetFolder: '$(build.artifactstagingdirectory)'
   
         - task: PublishBuildArtifacts@1
-          displayName: 'Publish Artifact: drop'
+          displayName: 'Publish Artifact: infra'
           inputs:
-            ArtifactName: drop
+            ArtifactName: infra
 
   - stage: DEV
     displayName: DEV
